# USART-CLI

./: CMakeLists.txt
package/: CMakeLists.txt
package/main/: CMakeLists.txt
package/main/inc/: main.hpp
package/main/src/: main.cpp
package/usart/: CMakeLists.txt
package/usart/inc/: CUSART.hpp  IUSART.hpp
package/usart/src/: CUSART.cpp
